Test für einen Pull Request über VSCode

--- a/README
+++ b/README
@@ -2,3 +2,6 @@ Der code für denn DW kurs
 Wird hauptsächlich .html und .ino sowie .css sein
 
 Test für Pull Request
+
+Test für einen Pull Request über VSCode
+
