Ein sehr schöner Pull Request :)

--- a/README
+++ b/README
@@ -6,3 +6,5 @@ Test für Pull Request
 Test für einen Pull Request über VSCode
 
 Test für einen Pull Request aus VSCode heraus! :)
+
+Ein sehr schöner Pull Request :)
